# relibank

./: .env-example  .gitignore  README.md  build-push-images.sh  cleanup-k8s.sh  deploy-k8s.sh  docker-compose.yml  pyproject.toml  simple-chaos.sh  skaffold.env  skaffold.env-example  skaffold.env.example  skaffold.yaml  testing.md  todos.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-push-images.yml  chatbot-loadgen.yml  deploy-relibank.yml  flow-chatbot-loadgen.yml  flow-chatbot-specialist.yml  flow-cycle-payment-scenarios.yml  flow-k8s-bill-pay.yml  flow-lcp-ab-test.yml  flow-stress-chaos.yml  relibank-infra.yml  relibank-newrelic.yml  test-suite.yml
accounts_service/: Dockerfile  README.md  accounts_service.py  pyproject.toml  requirements.txt
accounts_service/postgres/: Dockerfile  init.sql
accounts_service/utils/: process_headers.py  requirements.txt
auth_service/: Dockerfile  auth_service.py  logging.conf  newrelic.ini  requirements.txt
auth_service/utils/: process_headers.py
bill_pay/: Dockerfile  README.md  app.py  bill_pay_service.py  consumer.py  newrelic.ini  pyproject.toml  requirements.txt
bill_pay/utils/: process_headers.py
chaos_mesh/: INSTALLATION.md  README.md  values.yaml
chaos_mesh/experiments/: comprehensive-workflow.yaml  database-failure-experiment.yaml  io-chaos-experiment.yaml  kafka-chaos-experiment.yaml  network-delay-experiment.yaml  network-partition-experiment.yaml  pod-kill-experiment.yaml  relibank-payment-resilience.yaml  relibank-pod-chaos-examples.yaml  stress-chaos-experiment.yaml
chatbot_remediator/: DEPLOYMENT.md  Dockerfile  build-and-push.sh  chatbot_service_assistants.py  create_assistants.py  deploy.sh
chatbot_remediator/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secrets.yaml.template
chatbot_service/: AUTOGEN_MIGRATION.md  AZURE_ASSISTANTS_SETUP.md  CHANGES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  chatbot_service.py  chatbot_service_local_mcp.py  chatbot_service_old.py  create_assistants.py  logging.conf  mcp_client.py  newrelic.ini  pyproject.toml  requirements.txt  setup_k8s_azure.sh  test_assistants.sh
chatbot_service/utils/: process_headers.py
demo_flows/chatbot_loadgen/: create_chatbot_loadgen.py
demo_flows/chatbot_specialist/: chatbot_specialist_loadgen.py  send_marker_chatbot.py
demo_flows/k8s_bill_pay/: send_marker_bill_pay.py  trigger_chaos.py
demo_flows/stress_loadgen/: bill_pay_service_load.py  transaction_service_load.py
demo_flows/support_loadgen/: create_support_loadgen.py  questions.txt
demo_flows/support_specialist/: specialist_questions.txt
docs/: DATABASE_POOL_SCENARIO.md  data_types.md  fastapi.md  primer.md  runbook.md  scenarios.md  user_flows.md
event_scheduler/: Dockerfile  README.md  pyproject.toml  requirements.txt  scheduler_service.py
frontend/: Dockerfile
frontend_service/: .claude.md  Dockerfile  README.md  generate_nrjs_file.sh  package-lock.json  package.json  vite.config.ts  vitest.config.ts
github_action_monitoring/: export_to_newrelic.py
k8s/: accounts-data-persistentvolumeclaim.yaml  accounts-db-cluster.yaml  accounts-db-cm1-configmap.yaml  accounts-db-credentials-secret.yaml  accounts-db-deployment.yaml  accounts-db-service.yaml  accounts-service-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kafka-deployment.yaml  kustomization.yaml  manage-config.sh  monitoring.yaml  mssql-deployment.yaml  mssql-init-cm0-configmap.yaml  mssql-init-deployment.yaml  mssql-secret.yaml  mssql-service.yaml  namespace.yaml  network-policies.yaml  notifications-service-service.yaml  pod-disruption-budgets.yaml  relibank-namespace.yaml  resource-quotas.yaml  scheduler-service-deployment.yaml  secrets-values.yaml  secrets.yaml  transaction-service-deployment.yaml  zookeeper-deployment.yaml  zookeeper-service.yaml
kafka_service/: Dockerfile
newrelic/: selenium_chatbot.js  selenium_login.js  selenium_transfer.js
notifications_service/: Dockerfile  README.md  logging.conf  notifications_service.py  pyproject.toml  requirements.txt
notifications_service/azure_function/: function_app.py  requirements.txt
otel-collector/: Dockerfile
otel_collector_kafka/: Dockerfile  README.md
otel_collector_mssql/: Dockerfile
postman/: Relibank.postman_collection.json
risk_assessment_service/: Dockerfile  README.md  logging.conf  requirements.txt  risk_assessment_service.py
scenario_service/: Dockerfile  README.md  index.html  pyproject.toml  requirements.txt  scenario_runner.py  scenario_service.py
scenario_service/chaos_mesh/: README.md
scenario_service/chaos_mesh/experiments/: relibank-pod-chaos-adhoc.yaml  relibank-pod-chaos-examples.yaml  relibank-stress-scenarios.yaml
scenario_service/locust/: pay_cancel.py
scenario_service/selenium/: brute_force_charlie.py  loadgen.py
scheduler_service/: Dockerfile  README.md  pyproject.toml  requirements.txt  scheduler_service.py
scripts/: generate-nrdot-env.sh
support_service/: AUTOGEN_MIGRATION.md  AZURE_ASSISTANTS_SETUP.md  CHANGES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  create_assistants.py  create_full_apm_assistants.py  logging.conf  newrelic.ini  newrelic_dashboard.json  setup_k8s_azure.sh  support_service.py  support_service_assistants.py  test_assistants.sh
tests/: QUICKSTART.md  README.md  generate_mfe_traffic.py  requirements.txt  run_tests.sh  setup_test_env.sh  test_ab_testing_scenarios.py  test_apm_user_tracking.py  test_browser_user_tracking.py  test_card_payment_transactions.py  test_db_pool_e2e.py  test_db_pool_scenarios.py  test_dem_scenarios.py  test_end_to_end.py  test_mfe_single.py  test_microfrontend_telemetry.py  test_newrelic_instrumentation.py  test_newrelic_risk_assessment.py  test_nrdot_mssql_collector.py  test_payment_scenarios.py  test_rogue_deployment_scenarios.py  test_scenario_service.py  test_stress_scenarios.py  test_with_interactions.py
transaction_service/: Dockerfile  README.md  notes.md  pyproject.toml  requirements.txt  transaction_service.py
utils/: __init__.py  process_headers.py
(+261 files in other folders)
