[project]
name = "relibank"
version = "0.1.0"
description = "Repo for the Relibank microservices."
authors = [
{name = "Relibank Team", email = "team@relibank.com"}
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
"isort>=5.12.0",
"flake8>=6.0.0",
"ruff"
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
line-length = 120
indent-width = 4
show-fixes = true
fix = true
output-format = "grouped"

target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"