[project]
name = "relibank-chatbot-service"
version = "0.2.0"
description = "AI chatbot service with MCP tool integration"
authors = [
    {name = "Relibank Team", email = "team@relibank.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "gunicorn>=23.0.0,<24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatbot_service"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
