[project]
name = "chatbot-service"
version = "1.0.0"
description = "AI chatbot service with MCP tool integration"
authors = [
    {name = "Relibank Team", email = "team@relibank.com"}
]
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "openai>=1.102.0",
    "httpx>=0.28.1",
    "fastmcp>=2.11.3",
    "pydantic>=2.12.0a1",
    "gunicorn>=23.0.0,<24",
]

[dependency-groups]
dev = [
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatbot_service"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
