[project]
name = "service-scheduler"
version = "1.0.0"
description = "Relibank Event Scheduler Service"
authors = [{ name = "Relibank Team" }]

requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "sqlalchemy>=2.0.43",
    "pymssql>=2.3.7",
    "schedule>=1.2.0",
    "httpx>=0.28.1,<0.29",
]

[dependency-groups]
dev = [
    "ruff",
    "isort",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["event_scheduler"]


[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
indent-width = 4
show-fixes = true
fix = true
output-format = "grouped"

target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
