[project]
name = "scenario-service"
version = "0.1.0"
description = "A FastAPI application to trigger scenarios and create chaos in Relibank."
authors = [
{name = "Relibank Team", email = "team@relibank.com"}
]
requires-python = ">=3.12"
dependencies = [
"fastapi>=0.116.1",
"uvicorn[standard]>=0.35.0",
"kubernetes>=30.1.0",
"python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "ruff"
]

[tool.hatch.build.targets.wheel]
packages = ["scenario_service"]

[tool.ruff]
line-length = 120
indent-width = 4
show-fixes = true
fix = true
output-format = "grouped"

target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"