[project]
name = "scheduler-service"
version = "1.0.0"
description = "Event scheduler service, handles recurring payments"
authors = [
    {name = "Relibank Team", email = "team@relibank.com"}
]
# readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.0a1",
    "newrelic>=v10.17.0",
    "python-multipart>=0.0.20",
    "aiokafka>=0.12.0",
    "pyodbc>=5.2.0",
    "schedule>=1.2.1",
]

[dependency-groups]
dev = [
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scheduler_service"]

[tool.ruff]
line-length = 120
indent-width = 4
show-fixes = true
fix = true
output-format = "grouped"

target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
